--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/axios": "^0.14.4",
     "@types/bun": "latest",
+    "@types/prompts": "^2.4.9",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.31.0",
-    "@typescript-eslint/parser": "^8.31.0",
-    "dedent": "^1.5.3",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "axios": "^1.9.0",
+    "dedent": "^1.6.0",
     "eslint": "^9.25.1",
     "fs": "^0.0.1-security",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
     "path": "^0.12.7",
     "prettier": "^3.5.3",
+    "prompts": "^2.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "uuid": "^11.1.0",
