--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.25.1",
+    "@eslint/js": "^9.26.0",
+    "@faker-js/faker": "^9.7.0",
     "@types/axios": "^0.14.4",
     "@types/bun": "latest",
     "@types/prompts": "^2.4.9",
@@ -15,7 +16,7 @@
     "@typescript-eslint/parser": "^8.31.1",
     "axios": "^1.9.0",
     "dedent": "^1.6.0",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "fs": "^0.0.1-security",
     "jiti": "^2.4.2",
     "jsdom": "^26.1.0",
@@ -28,7 +29,7 @@
     "vitest": "^3.1.2"
   },
   "bin": {
-    "airaga": "node dist\\src\\index.js"
+    "airaga": "node dist\\src\\commands\\cli.js"
   },
   "scripts": {
     "build": "tsc --build && tsc-alias",
