--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "vitest": "^3.1.2"
   },
   "bin": {
-    "airaga": "node dist\\src\\index.js"
+    "airaga": "./dist/src/index.js"
   },
   "scripts": {
     "build": "tsc --build && tsc-alias",
