--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@faker-js/faker": "^9.8.0",
+    "@eslint/js": "^9.32.0",
+    "@faker-js/faker": "^9.9.0",
     "@types/axios": "^0.14.4",
     "@types/bun": "latest",
     "@types/prompts": "^2.4.9",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.35.0",
-    "@typescript-eslint/parser": "^8.35.0",
-    "axios": "^1.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "axios": "^1.11.0",
     "dedent": "^1.6.0",
-    "eslint": "^9.29.0",
+    "eslint": "^9.32.0",
     "fs": "^0.0.1-security",
-    "jiti": "^2.4.2",
+    "jiti": "^2.5.1",
     "jsdom": "^26.1.0",
     "path": "^0.12.7",
-    "prettier": "^3.6.1",
+    "prettier": "^3.6.2",
     "prompts": "^2.4.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "uuid": "^11.1.0",
     "vitest": "^3.2.4"
   },
   "bin": {
-    "airaga": "./dist/src/index.js"
+    "airaga": "./dist/cli/index.js"
   },
   "scripts": {
-    "build": "tsc --build && tsc-alias",
+    "build": "tsc --build && tsc-alias -p tsconfig.json && tsx scripts/copy-assets.ts",
     "lint": "eslint . --fix --ext .ts",
     "prettier": "prettier --write .",
     "test": "vitest run"
